--- a/CSS3/css/estilo.css
+++ b/CSS3/css/estilo.css
@@ -1,15 +1,88 @@
-
+/* 
 #box{
     
     width: 300px;
     height: 320px;
-    background: #9acd32;
-    padding: 50px;
-    box-sizing: border-box;
-    webkit-box-sizing: border-box;
-    moz-box-sizing: border-box;
-
-    /* border-radius: 20px;
-    -webkit-border-radius:20px;
-    -moz-border-radius:20px; */
+    background: url("../img/fly.jpg");
+    
+    
 }
+
+#box h1{
+    background: rgb(255,255,255,0.5);
+    border-bottom:  1px solid #FFF;
+    
+}
+#box p{
+    color: aliceblue;
+} 
+
+#box{
+width: 300px;
+height: 300px;
+ background: linear-gradient(to top,red ,yellow); 
+background: radial-gradient(red ,yellow);
+
+}*/
+
+#box{
+    width: 300px;
+    height: 300px;
+    margin: 50px auto;
+    padding: 8px;
+    background: #009670;
+    box-shadow: 10px 4px black;
+    /* We can use more than 1 shadow */
+}
+
+#box h1{
+    color: white;
+    font-size: 60px;
+    text-shadow: 4px 4px black;
+}
+
+/* Animation
+ ******************************************************** */
+@keyframes animation-box{
+    from{
+        background: red;
+        border-radius: 0px;
+        top: 0;
+        left: 0;
+    }
+    to {
+        background: yellow;
+        border-radius: 300px;
+        top: 200px;
+        left: 200px;
+    }
+
+}
+ #box-animation{
+     width: 300px;
+     height: 300px;
+     background: red;
+     position: relative;
+     animation-name: animation-box;
+     animation-duration: 5s;
+     animation-iteration-count: 2;
+     animation-direction: alternate;
+     /* animation-delay: 3s; */
+ }
+
+ /* Transitions 
+ *********************************************************/
+
+ #box-transitions{
+    width: 300px;
+    height: 300px;
+    background: orange;
+
+ }
+
+ #box-transitions:hover{
+    width: 400px;
+    background: black;
+    transition: background 3s, width 8s;
+
+ }
